# dire_matching_engine

./: Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  response.json
benches/: engine.rs
deploy/: README.md  deploy-gcp.sh
deploy/kubernetes/: deployment.yaml  hpa.yaml  service.yaml
project_docs/: admin_api.md  api_documentation.md  architecture_diagram.md  audit_trail.md  auth_config.md  certification_suite.md  deployment.md  fix_adapter_design.md  fix_quickfix_test.md  integration_tests.md  manual_testing.md  market_data_generator.md  matching_engine_charter.md  matching_logic_diagram.md  multi_instrument_design.md  onboarding.md  onboarding_flow_diagram.md  openapi.yaml  order_lifecycle_diagram.md  order_state_diagram.md  packaging_for_exchange.md  performance_benchmarks.md  phase_1_plan.md  phase_1_pre_phase2_checklist.md  phase_2_checklist.md  phase_2_plan.md  phase_3_checklist.md  phase_3_plan.md  phase_4_checklist.md  phase_4_plan.md  phase_5_checklist.md  phase_5_plan.md  protocol_abstraction.md  slack_notify.md  user_stories_by_phase.csv  user_stories_by_phase.md
scripts/: cert_suite.sh  place_trades_all_instruments.sh
src/: api.rs  audit.rs  auth.rs  engine.rs  execution.rs  lib.rs  main.rs  market_data_gen.rs  matching.rs  order_book.rs  persistence.rs  types.rs
src/fix/: acceptor.rs  message.rs  mod.rs
tests/: fix_adapter.rs  proptest_invariants.rs  rest_api.rs  ws_market_data.rs
