[package]
name = "dire_matching_engine"
version = "0.1.0"
edition = "2021"
description = "High-performance, deterministic backend matching engine"
license = "MIT OR Apache-2.0"

[[bin]]
name = "dire_matching_engine"
path = "src/main.rs"

[dependencies]
rust_decimal = "1.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# for property-based or deterministic tests later
# proptest = "1.5"
