[package]
name = "dire_matching_engine"
version = "0.1.0"
edition = "2021"
description = "High-performance, deterministic backend matching engine"
license = "MIT OR Apache-2.0"

[[bin]]
name = "dire_matching_engine"
path = "src/main.rs"

[dependencies]
rand = "0.8"
rust_decimal = { version = "1.36", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
criterion = "0.5"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "1.36", features = ["serde"] }
tokio-tungstenite = "0.24"
proptest = "1.5"

[[bench]]
name = "engine"
harness = false
